# train

./: .env.example  .gitignore  Cargo.toml  MIGRATE.md  Makefile.toml  README copy.md  README.md  RELEASES.md  Staged-Migration.md  clippy.toml  compose.yaml  deny.toml  expanded.rs  nats.conf  otel-collector-config.yaml  otel-config.yaml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md  copilot-structure.md  wasi-mapping-guide.md
.github/prompts/: Construction-Prompt  Construction_Prompt_V3_Rebuilt.md  Extraction-Prompt  Matthews-consruct.txt  Stage-1.md  Stage-2.md  Stage-3.md  Stage-4.md  construction_prompt_v3.md  prompt_construction.txt  prompt_v12.txt  test_suite_prompt.txt
.github/workflows/: audit.yaml  ci.yaml  patch.yaml  publish.yaml  release.yaml
crates/common/: Cargo.toml  README.md
crates/common/src/: block_mgt.rs  fleet.rs  lib.rs
crates/dilax/: Cargo.toml
crates/dilax-adapter/: Cargo.toml  README.md
crates/dilax-adapter-ai/: Cargo.toml  DIFF-REPORT.md  IR.txt
crates/dilax-adapter-ai/data/: ai-dilax_current_result-out.json  ai-dilax_dummy_message-out.json  dilax_current_result.json  dilax_dummy_legacy_result.json  dilax_dummy_message.json
crates/dilax-adapter-ai/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/dilax-adapter-ai/src/handlers/: mod.rs
crates/dilax-adapter-ai/src/logic/: lost_connections.rs  mod.rs  processor.rs
crates/dilax-adapter-ai/tests/: compare.rs  provider.rs  recorded.rs
crates/dilax-adapter/data/: dilax_datacontract.json  dilax_dummy_legacy_result-out.json  dilax_dummy_message-out.json
crates/dilax-adapter/src/: block_mgt.rs  gtfs.rs  handlers.rs  lib.rs  trip_state.rs  types.rs
crates/dilax-adapter/src/handlers/: detector.rs  processor.rs
crates/dilax-adapter/tests/: provider.rs  recorded.rs
crates/dilax-apc-connector/: Cargo.toml  README.md
crates/dilax-apc-connector/data/: dilax-no-device.json  dilax-whitespace.json  dilax_sample.json
crates/dilax-apc-connector/src/: handler.rs  lib.rs
crates/dilax-apc-connector/tests/: provider.rs  static.rs
crates/dilax/data/: dilax_current_result.json  dilax_dummy_message.json
crates/dilax/src/: api.rs  block_mgt.rs  config.rs  detector.rs  error.rs  gtfs.rs  lib.rs  occupancy.rs  processor.rs  provider.rs  state.rs  store.rs  trip_state.rs  types.rs
crates/dilax/src/handlers/: detector.rs  processor.rs
crates/r9k-adapter/: Cargo.toml  README.md
crates/r9k-adapter-Ai-5/: Cargo.toml  IR.txt  MIGRATION.md  README.md
crates/r9k-adapter-Ai-5/data/sessions/: 4149.yml  4156.yml  4223.yml
crates/r9k-adapter-Ai-5/src/: block_mgt.rs  config.rs  error.rs  gtfs.rs  lib.rs  types.rs
crates/r9k-adapter-Ai-5/src/handlers/: processor.rs
crates/r9k-adapter-Ai-5/tests/: core.rs  fixture_gen.rs  gap_scenarios.rs  legacy_runner.js  parity_extended.rs  parity_harness.rs  provider.rs  provider_mock.rs  recorded-copy.rs  two_tap_behavior.rs
crates/r9k-adapter/data/replay/: 0001.json  0048.json  0049.json  0304.json  2747.json  4149.json  4156.json  4228.json
crates/r9k-adapter/data/sessions/: 0001.json  0001.yml  0048.json  0048.yml  0049.json  0049.yml  0304.json  0304.yml  2747.json  2747.yml  3072.json  3072.yml  4145.json  4145.yml  4149.json  4156.json  4156.yml  4223.json  4228.json  4228.yml  4247.json  4247.yml
crates/r9k-adapter/data/sessions2/: 0001.json  0048.json  4149.json  4223.json  4228.json  4247.json
crates/r9k-adapter/data/static/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json
crates/r9k-adapter/data/wiretap/: 0304.yml  4149.yml  4247.yml
crates/r9k-adapter/src/: handler.rs  lib.rs  provider.rs  r9k.rs  smartrak.rs  stops.rs
crates/r9k-adapter/tests/: core.rs  provider.rs  recorded.rs  replay.rs  replay2.rs  static.rs  wiretap.rs
crates/r9k-connector/: Cargo.toml  README.md
crates/r9k-connector/data/: soap.xml
crates/r9k-connector/src/: error.rs  handler.rs  lib.rs  provider.rs
crates/r9k-http/: Cargo.toml
crates/r9k-http/data/: event.xml
crates/r9k-http/src/: handler.rs  lib.rs  r9k.rs
crates/r9k-position/: Cargo.toml  README.md
crates/r9k-position-adapter/: Cargo.toml
crates/r9k-position/data/: 2_events.yml  3072.yml  4149.yml  4156.yml  4223.yml  4228.yml  4247.yml  4_events.yml  long_delay.yml  not_relevant_station.yml  outdated.yml  sample.xml
crates/r9k-position/data/wiretap/: 0001.yml  0049.yml  2747.yml  3072.yml  4223.yml
crates/r9k-position/src/: error.rs  gtfs.rs  handler.rs  lib.rs  provider.rs  r9k.rs  r9k_date.rs  smartrak.rs  stops.rs
crates/r9k-position/tests/: core.rs  provider.rs  r9k.rs  wiretap.rs
crates/realtime/: Cargo.toml  README.md
crates/realtime/src/: error.rs  lib.rs  provider.rs
crates/smartrak-gtfs/: Cargo.toml  README.md
crates/smartrak-gtfs/data/: fleet-query.json  realtime-caf-avl.v2.json  realtime-passenger-count.v1.json  realtime-r9k-to-smartrak.v1.json  realtime-smartrak-train-avl.v1.json
crates/smartrak-gtfs/src/: block_mgt.rs  cache.rs  config.rs  data_access.rs  error.rs  fleet.rs  god_mode.rs  handlers.rs  key_locker.rs  lib.rs  location.rs  locks.rs  models.rs  processor.rs  provider.rs  rest.rs  serial_data.rs  trip.rs  workflow.rs
crates/smartrak-gtfs/src/handlers/: caf_avl.rs  passenger_count.rs  r9k.rs  reset.rs  set_trip.rs  smartrak.rs  train_avl.rs  vehicle_info.rs
crates/smartrak-gtfs/src/model/: dead_reckoning.rs  events.rs  fleet.rs  gtfs.rs  mod.rs  trip.rs
crates/smartrak-gtfs/src/processor/: location.rs  mod.rs  passenger_count.rs  serial.rs  serial_data.rs
crates/smartrak-gtfs/src/service/: mod.rs  orchestrator.rs  processor.rs
examples/: .env.example  README.md  train.rs
legacy/at_dead_reckoning_adapter/: README.md  at_dead_reckoning_adapter.sln  bitbucket-pipelines.yml
legacy/at_dilax_adapter/: .env.example  .gitignore  .snyk  README.md  package.json  (+3 more)
src/: block_mgt.rs  config.rs  gtfs.rs  guest.rs  http.rs  identity.rs  lib.rs  macro.rs  messaging.rs  provider.rs
supply-chain/: README.md  audits.toml  config.toml
(+210 files in other folders)
