[package]
name = "train"
description = "Train features"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
# path = "src/guest.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["json", "macros", "query"] }
bytes.workspace = true
dilax-adapter = { path = "crates/dilax-adapter" }
dilax-apc-connector = { path = "crates/dilax-apc-connector" }
fromenv = "0.1.0"
http.workspace = true
http-body.workspace = true
r9k-adapter = { path = "crates/r9k-adapter" }
r9k-connector = { path = "crates/r9k-connector" }
smartrak-gtfs = { path = "crates/smartrak-gtfs" }
tracing.workspace = true
warp-sdk.workspace = true
wasi-http.workspace = true
wasi-identity.workspace = true
wasi-keyvalue.workspace = true
wasi-messaging.workspace = true
wasi-otel.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
cfg-if = "1.0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
futures.workspace = true
tokio.workspace = true
wasmtime.workspace = true
warp.workspace = true
wasmtime-wasi.workspace = true

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Propellerhead"]
categories = ["realtime"]
edition = "2024"
exclude = [".*", "/docs"]
homepage = "https://propellerhead.co.nz"
keywords = ["realtime", "train"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AucklandTransportCode/train"
rust-version = "1.92"
version = "0.3.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
# missing_docs = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
nursery = "warn"
pedantic = "warn"
cargo = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", default-features = false }
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
futures = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
quick-xml = { version = "0.38.4", features = ["serde", "serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde_yaml = "0.9.34-deprecated"
thiserror = "2.0.17"
tokio = { version = "1.47.1", default-features = false, features = ["io-util", "macros", "rt", "sync", "time"] }
tracing = "0.1.44"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
wasip3 = { version = "0.3.1", features = ["http-compat"] }
wasmtime = { version = "40.0.0", default-features = false, features = [
    "component-model-async",
    "parallel-compilation",
] }
wasmtime-wasi = { version = "40.0.0", features = ["p3"] }
wit-bindgen = { version = "0.50.0", features = ["async-spawn"] }

# Credibil registry
warp = { version = "0.22.1", registry = "credibil" }
warp-sdk = { version = "0.22.1", registry = "credibil" }
wasi-http = { version = "0.22.1", registry = "credibil" }
wasi-identity = { version = "0.22.1", registry = "credibil" }
wasi-keyvalue = { version = "0.22.1", registry = "credibil" }
wasi-messaging = { version = "0.22.1", registry = "credibil" }
wasi-otel = { version = "0.22.1", registry = "credibil" }

# Internally referenced crates
common = { path = "crates/common" }

# [patch.credibil]
# warp = { path = "../../augentic/warp/crates/warp" }
# warp-sdk = { path = "../../augentic/warp/crates/warp-sdk" }
# wasi-http = { path = "../../augentic/warp/crates/wasi-http" }
# wasi-identity = { path = "../../augentic/warp/crates/wasi-identity" }
# wasi-keyvalue = { path = "../../augentic/warp/crates/wasi-keyvalue" }
# wasi-messaging = { path = "../../augentic/warp/crates/wasi-messaging" }
# wasi-otel = { path = "../../augentic/warp/crates/wasi-otel" }

[profile.release]
lto = "thin"
opt-level = "s"
strip = "symbols"
