[package]
name = "common"
description = "Common train domain logic"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
fabric.workspace = true
http.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
