[package]
name = "dilax-adapter"
description = "Dilax adapter domain logic"
readme = "README.md"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
common.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
credibil-api.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
realtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
