[package]
name = "dilax-apc-connector"
description = " Dilax APC connector"
readme = "README.md"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
credibil-api.workspace = true
fabric.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
