[package]
name = "dilax"
description = "Dilax adapter domain logic"
readme = "README.md"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1.83"
chrono.workspace = true
chrono-tz = "0.8"
futures.workspace = true
http.workspace = true
realtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasi-keyvalue.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio.workspace = true
serde_json.workspace = true
