[package]
name = "r9k-adapter-ai-5"
description = "R9K position adapter domain logic"
readme = "README.md"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
credibil-api.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
quick-xml.workspace = true
realtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
rand = "0.8"
tempfile = "3.10"
quick-xml.workspace = true
serde-xml-rs = "0.8.2"
