[package]
name = "r9k-adapter"
description = " R9K position adapter"
readme = "README.md"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
tracing.workspace = true
warp-sdk.workspace = true

[dev-dependencies]
test-utils.workspace = true
tokio.workspace = true
