[package]
name = "r9k-connector"
description = " R9K HTTP connector"
readme = "README.md"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
warp-sdk.workspace = true

[dev-dependencies]
tokio.workspace = true
