[package]
name = "realtime"
description = "Core realtime modules"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
http-body.workspace = true

# [dev-dependencies]
# tokio.workspace = true
