[package]
name = "smartrak-gtfs"
description = "SmarTrak GTFS adapter domain logic"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dashmap.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
wit-bindings.workspace = true

[dev-dependencies]
futures.workspace = true
serde_json.workspace = true
